Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64237

implicit "." not working if ambiguous to library import

XMLWordPrintable

      Discovered while fixing : QTCREATORBUG-19194

       

      The property editor in Qt Quick Designer stays white with Qt 5.10.

      I get
       

      qt-creator/share/qtcreator/qmldesigner/propertyEditorQmlSources/QtQuick/ItemPane.qml:272:25: LayoutSection is not a type
      

      Adding import "." to ItemPane, LayoutSection and AdvancedSection seems to fix the issue.
      This is a regression from Qt 5.9.2.

      The problem comes from having QtQuick as a path under the import path see attachment.

        For Gerrit Dashboard: QTBUG-64237
        # Subject Branch Project Status CR V

            mbrasser Michael Brasser
            thohartm Thomas Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes