QmlDesigner: Move HelperWidgets

Having the HelperWidgets next to the QtQuick directory was triggering
a bug in Qt (QTBUG-64237).

The property editor was white with Qt 5.10, because the "." import is
mapped to "./QtQuick" and was confused with QtQuick 2.x.

Task-number: QTCREATORBUG-19194
Change-Id: I4148d8e40f1e886eb41ffe6f4df62b213af5e9c3
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>