share/qtcreator/qmldesigner/propertyEditorQmlSources/imports/HelperWidgets/ScrollView.qml
@@ -25,7 +25,7 @@
 
 import QtQuick 2.1
 import QtQuick.Controls 1.0 as Controls
-import "../../common/"
+import "../../../common/"
 
 Controls.ScrollView {
     style: DesignerScrollViewStyle {
