share/qtcreator/qmldesigner/statesEditorQmlSources/StatesDelegate.qml
@@ -26,7 +26,7 @@
 import QtQuick 2.2
 import QtQuick.Controls 1.1
 import QtQuick.Controls.Styles 1.1
-import "../propertyEditorQmlSources/HelperWidgets"
+import HelperWidgets 2.0
 import QtQuickDesignerTheme 1.0
 
 Rectangle {
